--- a/tango_with_django_project/templates/index.html
+++ b/tango_with_django_project/templates/index.html
@@ -17,6 +17,6 @@
        {% else %}
             <strong>There are no categories present.</strong>
        {% endif %}
-
+       <a href="/rango/">Rango</a>
     </body>
 </html>
