--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -17,6 +17,7 @@
        {% else %}
             <strong>There are no categories present.</strong>
        {% endif %}
+       <a href="/rango/add_category/">Add a New Category</a>
 
     </body>
 </html>
