--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
 
-    <body>
-        <h1>Rango says..hello world!</h1>
+{% block title %}{{ category_name }}{% endblock %}
+
+{% block body_block %}
+        {% if user.is_authenticated %}
+          <h1>Rango says... hello {{ user.username }}!</h1>
+        {% else %}
+          <h1>Rango says... hello world!</h1>
+        {% endif %}
 
         {% if categories %}
             <ul>
@@ -17,7 +19,5 @@
        {% else %}
             <strong>There are no categories present.</strong>
        {% endif %}
-       <a href="/rango/add_category/">Add a New Category</a>
 
-    </body>
-</html>
+{% endblock %}
