--- a/tango_with_django_project/templates/tango/index.html
+++ b/tango_with_django_project/templates/tango/index.html
@@ -17,6 +17,8 @@
        {% else %}
             <strong>There are no categories present.</strong>
        {% endif %}
-       <a href="/rango/">Rango</a>
+       <a href="/rango/add_category/">Add a New Category</a>
+       <a href="/rango/register/">Register Here</a>
+
     </body>
 </html>
