--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -5,6 +5,7 @@
 {% block body_block %}
     <h1>Rango says...</h1>
     hello world! <strong>{{boldmessage}}</strong><br/>
+    You have visited this page: {{ visits }}time!!!<br/>
     <img src="{% static "world.jpg" %}" alt="Picture of World" />
 {% endblock %}
 
