--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,11 +1,16 @@
 {% extends 'rango/base.html' %}
 {% load static %}
-{% block title %}About Rango{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block body_block %}
-    <h1>Rango says...</h1>
-    hello world! <strong>{{boldmessage}}</strong><br/>
-    You have visited this page: {{ visits }}time!!!<br/>
-    <img src="{% static "world.jpg" %}" alt="Picture of World" />
+<div class="hero-unit">
+    <h1>About Rango</h1>
+    This is <strong>Rango's about page</strong>.<br />
+
+    You've visited the site on <strong>{{ visit_count }} occasion(s)</strong>.<br />
+
+    Here's a picture of Rango!<br />
+    <img src="{% static 'rango.jpg' %}" alt="Picture of Rango" />
+</div>
 {% endblock %}
 
