--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,22 +1,26 @@
 {% extends 'rango/base.html' %}
-{% block title %}Add Page Rango{% endblock %}
+{% block title %}Add Page{% endblock %}
 
-    {% block body_block %}
-        <h1>Add a Page</h1>
-
-        <form id="category_form" method="post" action="/rango/category/{{ category_name_url }}/add_page/">
-
+{% block body_block %}
+<div class="hero-unit">
+    <h1>Add a Category</h1>
+    <br/>
+    <div class="container">
+        <form class="span6" id="category_form" method="post" action="/rango/category/{{ category_name_url }}/add_page/">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
-                {{ hidden }}
+            {{ hidden }}
             {% endfor %}
 
             {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
+            {{ field.errors }}
+            {{ field.help_text }}<br/>
+            {{ field }}
             {% endfor %}
 
-            <input type="submit" name="submit" value="Create Page" />
+            <br/>
+            <button class="btn btn-primary" type="submit" name="submit">Create Category</button>
         </form>
-    {% endblock %}
+    </div>
+</div>
+{% endblock %}
