--- a/tango_with_django_project/templates/rango/search.html
+++ b/tango_with_django_project/templates/rango/search.html
@@ -6,31 +6,32 @@
 
 {% block body_block %}
 <div class="hero-unit">
-    <h1>Search with Rango</h1>
-    <br/>
+	<h1>Search the Web</h1>
+	<br/>
 
-    <div class="container-fluid">
-        <form class="form-signin span8" id="user_form" method="post" action="/rango/search/">
-            {% csrf_token %}
-            <!-- Display the search form elements here -->
-            <input type="text" size="50" name="query" value="" id="query" />
-            <input class="btn btn-primary" type="submit" name="submit" value="Search" />
-            <br />
-        </form>
+	<div class="container-fluid">
+		<form class="span8 form-search" id="search_form" method="post" action="/rango/search/">
+			{% csrf_token %}
+			<!-- Display the search form elements here -->
+            <input type="text" class="input-long search-query"  name="query" value="" id="query" />
+            <button type="submit" class="btn btn-success" name="submit" value="Search">Search</button>
 
-        {% if result_list %}
-        <!-- Display search results in an ordered list -->
-        <div style="clear: both;">
-            <ol>
-            {% for result in result_list %}
-                <li>
-                    <strong><a href="{{ result.link }}">{{ result.title }}</a></strong><br />
-                    <em>{{ result.summary }}</em>
-                </li>
-            {% endfor %}
-            </ol>
-        </div>
-        {% endif %}
-    </div>
+		</form>
+	</div>
+	
+	<div class="container-fluid">
+		
+		{% if result_list %}
+		<!-- Display search results in an ordered list -->
+		<ol>
+		{% for result in result_list %}
+			<li>
+				<strong><a href="{{ result.link }}">{{ result.title }}</a></strong><br />
+				<p>{{ result.summary }}</p>
+			</li>
+		{% endfor %}
+		</ol>
+		{% endif %}
+	</div>
 </div>
 {% endblock %}
